# NLP_Transformers

./: .env.copy  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: config.py  constants.py  main.py
app/converters/: dialogue_format.py  mlx_data.py  templates.py
app/dataset/: downloader.py  processor.py
app/models/: config.py  constants.py  downloader.py  inference.py  inference_cpp.py  orchestrator.py  trainer_cuda.py  trainer_factory.py  trainer_mlx.py
app/training/: config.py  constants.py  evaluator.py  training.py  training_lora.py
app/utils/: analysis.py  hardware.py  logger.py  visualization.py
nlp_transformers.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
report/: main.tex  portada.tex
report/NOTOCAR/: packages.tex
report/content/: 1.tex  2.tex  3.tex  4.tex  5.tex  6.tex  7.tex  8.tex
results/analysis/: error_bias_analysis.json  integrated_gradients.json  quantitative_metrics.json
results/lora/: llama-3-2-1b-instruct_final_lora_config.yaml  llama-3-2-1b-instruct_optuna_llama_trial_0_config.yaml  llama-3-2-1b-instruct_optuna_llama_trial_1_config.yaml  llama-3-2-1b-instruct_optuna_llama_trial_2_config.yaml  optuna_llama_trial_0_config.yaml  optuna_llama_trial_1_config.yaml  optuna_llama_trial_2_config.yaml  optuna_qwen_trial_0_config.yaml  optuna_qwen_trial_1_config.yaml  optuna_qwen_trial_2_config.yaml  qwen3-5-2b_final_lora_config.yaml  qwen3-5-2b_optuna_qwen_trial_0_config.yaml  qwen3-5-2b_optuna_qwen_trial_1_config.yaml  qwen3-5-2b_optuna_qwen_trial_2_config.yaml
results/optuna/: optuna_llama.db  optuna_qwen.db
tests/dataset/: test_processor.py
tests/models/: test_inference.py
