[project]
name = "nlp-transformers"
version = "0.1.0"
description = "Práctica 2 - Transformers en NLP"
requires-python = ">=3.12"
maintainers = [
  { name = "Guillem Gonzalo", email = "guillemgonzalo2001@gmail.com" }
]
dependencies = [
    "pre-commit>=4.6.0",
    "ty>=0.0.32",
    "ruff>=0.15.12",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "accelerate>=0.26.0",
    "sentencepiece>=0.2.0",
]

[project.scripts]
nlp-t = "app.main:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
fixable = ["ALL"]
