[project]
name = "nlp-transformers"
version = "0.1.0"
description = "Práctica 2 - Transformers en NLP"
requires-python = ">=3.12"
maintainers = [
  { name = "Guillem Gonzalo", email = "guillemgonzalo2001@gmail.com" }
]
dependencies = [
    "pre-commit>=4.6.0",
    "ty>=0.0.32",
    "ruff>=0.15.12",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "accelerate>=0.26.0",
    "sentencepiece>=0.2.0",
    "gguf>=0.6.0",
    "llama-cpp-python>=0.2.76",
    "peft>=0.10.0",
    "evaluate>=0.4.1",
    "mlx-lm>=0.12.0",
    "python-dotenv>=1.2.2",
    "optuna>=4.8.0",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "captum>=0.9.0",
]

[project.scripts]
nlp-main = "app.main:main"
nlp-train = "app.training.training:run_optimization_sweep"
nlp-train-lora = "app.training.training_lora:run_lora_challenge_phase"
nlp-viz = "app.utils.visualization:run_visualizations"
nlp-analysis = "app.utils.analysis:run_full_analysis"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
fixable = ["ALL"]
